differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr15698-2.c-5.4.0-0.out.txt
pr15698-2.c: In function ‘g’:
pr15698-2.c:7:1: error: number of arguments doesn’t match prototype
 void g(a) int a; {}  
 ^
pr15698-2.c:6:17: error: prototype declaration
 void f() { void g(void); }  
                 ^
